Securite/CertificateManagement/WithCert-manager/tls-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: poc-bbo
  name: httpbin-tls-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert
      hosts:
        - httpbin.mon.dns
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - httpbin.mon.dns
