Securite/CertificateManagement/WithCert-manager/tls-virtuals-services.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: poc-bbo
  name: httpbin
spec:
  hosts:
    - httpbin.poc.innovation-laposte.io
  gateways:
    - httpbin-tls-gateway
  http:
    - match:
        - uri:
            prefix: /status
        - uri:
            prefix: /delay
      route:
        - destination:
            port:
              number: 8000
            host: httpbin
